Changed name offset->memoffset

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "offset"
+name = "memoffset"
 version = "0.1.0"
 authors = ["Gilad Naaman <gilad.naaman@gmail.com>"]
+description="offset_of functionality for Rust structs."
+license="Apache-2.0"
 
 [dependencies]
 
