--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 name = "memoffset"
 version = "0.1.0"
 authors = ["Gilad Naaman <gilad.naaman@gmail.com>"]
-description="offset_of functionality for Rust structs."
-license="MIT"
-readme="README.md"
+description = "offset_of functionality for Rust structs."
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/Gilnaa/memoffset"
+keywords = ["mem", "offset", "offset_of", "offsetof"]
+categories = ["no-std"]
 
 [dependencies]
 
