Added dual support for 1.33 and 1.19

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 sudo: false
 language: rust
 rust:
-  - 1.33.0  # Oldest supported
+  - 1.19.0  # Oldest supported
+  - 1.33.0  # Oldest supported with constant expressions
   - stable
   - beta
   - nightly
 matrix:
   include:
   - env: RUSTFMT
-    rust: 1.33.0  # `stable`: Locking down for consistent behavior
+    rust: 1.19.0
+    rust: 1.33.0
     install:
     - rustup component add rustfmt-preview
     script:
