--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache:
   cargo: true
 matrix:
   include:
-  - rust: 1.20.0  # Oldest supported
+  - rust: 1.19.0  # Oldest supported (first version with numeric fields in struct patterns)
   - rust: 1.36.0  # Oldest supported with MaybeUninit
   - rust: stable
   - rust: beta
