--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["mem", "offset", "offset_of", "offsetof"]
 categories = ["no-std"]
 
 [build-dependencies]
-rustc_version = "0.2.3"
+autocfg = "1"
 
 [dev-dependencies]
 doc-comment = "0.3"
