ci: Use `dtolnay/rust-toolchain`.
It has been a while since `actions-rs/toolchain` was maintained.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,9 @@ jobs:
           - nightly
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-          override: true
       - name: Run cargo test
         run: cargo test
 
@@ -39,10 +38,9 @@ jobs:
           - nightly
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-          override: true
       - name: Run cargo test
         # Exclude doctests here, as we don't want to clutter docs themselves
         # with backwards compatibility workarounds.
@@ -53,10 +51,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
-          override: true
       - name: Run cargo test
         # `--lib` prevents doctests from being run.
         # This is due to `unstable_const` requiring extra `feature(...)` directives
@@ -83,11 +80,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-            toolchain: 1.51.0 # pin a version for reproducible results
-            components: rustfmt
-            override: true
+          toolchain: 1.51.0 # pin a version for reproducible results
+          components: rustfmt
       - name: Check warnings
         run: RUSTFLAGS="-D warnings" cargo check --all-targets
       - name: Check formatting
