--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
           - 1.40.0  # Oldest supported with cfg(doctest)
           - 1.51.0  # Oldest supported with ptr::addr_of!
           - 1.65.0  # Oldest supported with stable const evaluation (sans cell)
+          - 1.77.0  # Oldest supported with native `offset_of!`
           - stable
           - beta
           - nightly
