--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ autocfg = "1"
 
 [dev-dependencies]
 doc-comment = "0.3"
+
+[features]
+default = []
+# NOP features, solely so that people do not have to change their Cargo.toml
+unstable_offset_of = []
+unstable_const = []
